2005-11-09  Titus Brown  <t@issola.caltech.edu>

	* Added William Volkman's patch fixing 'agent'.

2005-11-06  Titus Brown  <t@issola.caltech.edu>

	* Updated 'formvalue' and 'submit' help docs.

2005-11-05  Titus Brown  <t@issola.caltech.edu>

	* Added 'config' command, 'readonly_controls_writeable' option.
	  (James Cameron bug/fix)

	* Updated version numbers to 0.8.

	* Added command 'showlinks'.

	* Changed 'state' variable to 'browser' in commands.py

2005-11-04  Titus Brown  <t@issola.caltech.edu>

	* Put test/ tests into a nosetest-compatible format.  Yay,
	  unit tests!

2005-10-30  Titus Brown  <t@issola.caltech.edu>

	* Now catch errors from __ and $ eval failure (i.e. not in any
	  namespace) and reset the evaluation to just be the original name.
	  (bug reported by sureshvv).

2005-10-29  Titus Brown  <t@issola.caltech.edu>

	* Cleared content-type header in wwwsearch.zip, urllib2_support.py,
	  class HTTPRedirectHandler, redirect_request.  This fixes a bug
	  I noticed when testing collar: redirects inappropriately retain
	  content-type, and this breaks Quixote, at the least, when
	  enctype multipart/form-data is used in a POST prior to the
	  redirect.  (CTB: this should be dealt with more generally.)

	* Fixed back() behavior in _mechanize.  (I probably broke it in the
	  first place, sigh.)  Now accords with latest trunk _mechanize.py.

	* Fixed order of __url__ setting in parse.execute_command.

	* Added 'url' and 'exit' commands.

	* Added 'debug twill' to set printout of twill commands as they
	  are executed.

	* Attempted to add http_auth testing, but failed.  (non-functional
	  code left in test/)

	* Overrode 'view_html' bool function in PatchedMechanizeBrowser.
	  It now assumes that no content-type means text/html, and also
	  allows 'text/xml' to be used.  (James Cameron's issue.)

	* moved _TwillBrowserState into browser.py, named it TwillBrowser().

	* twill-sh now prints out the exception str when executing files,