@@ -448,7 +448,7 @@ promptly and enthusiastically checked in my various patches to
 mechanize.  Michele Simionato is an early adopter who has helped quite
 a bit.  Thanks, guys...</p>
 <p>Bug reports have come in from the following fine people: Chris Miles,
-MATSUNO Tokuhiro, and Elvelind Grandin.</p>
+MATSUNO Tokuhiro, Elvelind Grandin, and Mike Rovner.</p>
 <p>Patches have been submitted by: Joeri van Ruth, Paul McGuire, Ed Rahn,
 Nic Ferrier, Robert Leftwich, James Cameron, William Volkman, and
 Tommi Virtanen.  Thanks!</p>
