@@ -496,7 +496,7 @@ mechanize.  Michele Simionato is an early adopter who has helped quite
 a bit.  Thanks, guys...
 
 Bug reports have come in from the following fine people: Chris Miles,
-MATSUNO Tokuhiro, and Elvelind Grandin.
+MATSUNO Tokuhiro, Elvelind Grandin, and Mike Rovner.
 
 Patches have been submitted by: Joeri van Ruth, Paul McGuire, Ed Rahn,
 Nic Ferrier, Robert Leftwich, James Cameron, William Volkman, and
